--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/dev/Dockerfile
+      target: development
     container_name: test-app
     ports:
       - "8080:80"
@@ -11,3 +12,29 @@ services:
     environment:
       - ENVIRONMENT=dev
       - RELOAD=1
+  database:
+    image: mysql:8.0.27
+    container_name: database
+    restart: always
+    environment:
+      MYSQL_ROOT_PASSWORD: root #${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: test_db #${DB_NAME}
+      # MYSQL_USER: ${APP_NAME}_${DB_USER}
+      # MYSQL_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "3306:3306"
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    restart: always
+    ports:
+      - "8081:80"
+    environment:
+      PMA_HOST: database
+      PMA_PORT: 3306
+      PMA_USER: root
+      PMA_PASSWORD: root
+    depends_on:
+      - database
+    networks:
+      - fe25b-network
