Adds database and models
Introduces a persistent database using SQLModel, creating necessary tables for heroes and teams.  The application now connects to a MySQL database for data storage and retrieval.  Includes Docker configuration for database management.

--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -2,13 +2,18 @@ FROM python:3.9
 
 WORKDIR /code
 
-# Instalar dependencias del sistema (si necesitas alguna, ej: para PostgreSQL)
-# RUN apt-get update && apt-get install -y --no-install-recommends gcc python3-dev
+# Instalar dependencias del sistema (si necesitas compilar librerías)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    default-libmysqlclient-dev \
+    gcc \
+    python3-dev \
+    pkg-config \
+    netcat-openbsd \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY ./requirements.txt /code/requirements.txt
-
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+COPY requirements.txt .
+RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
 COPY ./app /code/app
 
-CMD ["fastapi", "run", "app/main.py", "--port", "80"]
+CMD ["fastapi", "dev", "app/main.py", "--port", "80"]
