--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,75 @@
 services:
-  test-app:
+  app:
     build:
       context: .
       dockerfile: ./docker/dev/Dockerfile
-      target: development
-    container_name: test-app
+    container_name: fastapi-app
     ports:
       - "8080:80"
     volumes:
       - ./app:/code/app
     environment:
-      - ENVIRONMENT=dev
-      - RELOAD=1
-  database:
+      - ENVIRONMENT=${ENVIRONMENT}
+      - RELOAD=${RELOAD}
+      - DB_URL=${DB_URL}
+    depends_on:
+      mysql:
+        condition: service_healthy
+    command:
+      - sh
+      - -c
+      - "while ! nc -z mysql 3306; do sleep 1; done && uvicorn app.main:app --host 0.0.0.0 --port 80 --reload"
+    networks:
+      - app-network
+
+  mysql:
     image: mysql:8.0.27
-    container_name: database
+    container_name: mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root #${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: test_db #${DB_NAME}
-      # MYSQL_USER: ${APP_NAME}_${DB_USER}
-      # MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_HOST: "%"
     ports:
       - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      - app-network
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "mysqladmin",
+          "ping",
+          "-h",
+          "localhost",
+          "-u$$MYSQL_USER",
+          "-p$$MYSQL_PASSWORD",
+        ]
+      interval: 5s
+      timeout: 10s
+      retries: 10
+
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     container_name: phpmyadmin
-    restart: always
+    depends_on:
+      - mysql
     ports:
       - "8081:80"
     environment:
-      PMA_HOST: database
-      PMA_PORT: 3306
-      PMA_USER: root
-      PMA_PASSWORD: root
-    depends_on:
-      - database
+      PMA_HOST: mysql
+      PMA_USER: ${MYSQL_USER}
+      PMA_PASSWORD: ${MYSQL_PASSWORD}
     networks:
-      - fe25b-network
+      - app-network
+
+volumes:
+  mysql_data:
+
+networks:
+  app-network:
+    driver: bridge
