--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -2,7 +2,6 @@ FROM python:3.9
 
 WORKDIR /code
 
-# Instalar dependencias del sistema (si necesitas compilar librerías)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     default-libmysqlclient-dev \
     gcc \
@@ -11,8 +10,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir --upgrade -r requirements.txt
+COPY ./requirements.txt /code/requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 COPY ./app /code/app
 
