--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - "8080:80"
     volumes:
       - ./app:/code/app
+      - ./static:/app/static
     depends_on:
       mysql:
         condition: service_healthy
