Adds environment file support
Improves the application's configuration by enabling the use of an environment file (.env) for managing sensitive variables such as API keys and database credentials.  This enhances security and maintainability.  Also updates FastAPI dependencies to include all optional features.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       SERVICE_NAME: fastapi.test
       SERVICE_TAGS: fastapi.dev
+    env_file:
+      - .env
     ports:
       - "8080:80"
     volumes:
