--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-fastapi[standard]>=0.113.0,<0.114.0
-# uvicorn>=0.15.0
+fastapi[all]>=0.113.0,<0.114.0
 pydantic>=2.7.0,<3.0.0
 sqlmodel>=0.0.19,<0.0.23
 python-dotenv>=0.19.0,<1.0.1
