Updates Docker configuration
Simplifies Docker volume mounts for improved consistency and reduces complexity.  The application code and static files are now mounted more efficiently.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./app:/code/app
-      - ./static:/app/static
+      - .:/app
+      - /app/static
     depends_on:
       mysql:
         condition: service_healthy
