--- a/docker/dev/Dockerfile
+++ b/docker/dev/Dockerfile
@@ -13,6 +13,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY ./requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
-COPY . .
+RUN groupadd -g 1000 devgroup
+RUN useradd -u 1000 -ms /bin/bash -g devgroup devuser
+
+COPY --chown=devuser:devgroup . /app
+
+RUN chown -R devuser:devgroup /app
+
+USER devuser
 
 CMD ["fastapi", "dev", "app/main.py", "--port", "80"]
