--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "8080:80"
     volumes:
       - .:/app
-      - /app/static
+      - /app/app/static
     depends_on:
       mysql:
         condition: service_healthy
