--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,33 @@
 services:
-  fastapi.test:
-    build:
-      context: .
-      dockerfile: ./docker/dev/Dockerfile
-    container_name: fastapi-app
-    restart: unless-stopped
-    tty: true
+  fastapi-app:
+    build: .
+    container_name: ${APP_NAME}_app
     environment:
-      SERVICE_NAME: fastapi.test
-      SERVICE_TAGS: fastapi.dev
+      DB_HOST: ${DB_HOST}
+      DB_NAME: ${DB_DATABASE}
+      DB_USER: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
     env_file:
       - .env
     ports:
-      - "8080:80"
+      - "8080:8080"
     volumes:
       - .:/app
       - /app/app/static
     depends_on:
       mysql:
         condition: service_healthy
-    command:
-      - sh
-      - -c
-      - "while ! nc -z mysql 3306; do sleep 1; done && uvicorn app.main:app --host 0.0.0.0 --port 80 --reload"
     networks:
       - app-network
 
   mysql:
-    image: "mysql/mysql-server:8.0"
-    container_name: ${APP_NAME}_mysql
-    restart: always
-    command: --tls-version=TLSv1.2,TLSv1.3
-      --host-cache-size=0
+    image: mysql:8.0
     environment:
-      MYSQL_SSL_MODE: DISABLED
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DB_NAME}
-      MYSQL_USER: ${DB_USER}
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
       MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ALLOW_EMPTY_PASSWORD: "no"
     ports:
       - "3306:3306"
     volumes:
@@ -52,33 +42,32 @@ services:
           "ping",
           "-h",
           "localhost",
-          "-u$$DB_USER",
-          "-p$$DB_PASSWORD",
+          "-u${DB_USERNAME}",
+          "-p${DB_PASSWORD}",
         ]
       interval: 5s
       timeout: 10s
-      retries: 3
+      retries: 5
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     ports:
       - "8081:80"
     environment:
-      SERVER_NAME: localhost
-      PMA_HOST: mysql
-      PMA_PORT: 3306
-      PMA_USER: ${DB_USER}
+      PMA_HOST: ${DB_CONNECTION}
+      PMA_USER: ${DB_USERNAME}
       PMA_PASSWORD: ${DB_PASSWORD}
-      MEMORY_LIMIT: 1G
-      UPLOAD_LIMIT: 1G
-      MAX_EXECUTION_TIME: 3600
+      # MEMORY_LIMIT: 1G
+      # UPLOAD_LIMIT: 1G
+      # MAX_EXECUTION_TIME: 3600
     depends_on:
       - mysql
     networks:
       - app-network
+
 networks:
   app-network:
     driver: bridge
+
 volumes:
   mysql_data:
-    driver: local
