--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 APP_NAME=fastapi
-# MySQL
-MYSQL_ROOT_PASSWORD=root
-DB_NAME=4thewords_prueba_michael_hernandez
-DB_USER=app_user
-DB_PASSWORD=secret123
-DB_HOST=mysql
-DB_PORT=3306
-DATABASE_URL="mysql+mysqldb://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}"
 
 # App
 ENVIRONMENT=dev
 RELOAD=1
+
+# MySQL
+DB_CONNECTION=mysql
+DB_HOST=mysql
+DB_PORT=3306
+DB_DATABASE=4thewords_prueba_michael_hernandez
+DB_USERNAME=app_user
+DB_PASSWORD=secret123
